# pyyagit

./: pyproject.toml
tests/: test_git_repo.py  test_simple_git.py
tests/data/: config_1.json
yagit/: __init__.py  git_repo.py
