[project]
name = "yagit"
version = "0.1.2"
description = ""
authors = [
    {name = "Chen Yang",email = "yangchen@thinkmore.info"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "sh (>=2.2.2,<3.0.0)",
    "yautils @ git+https://github.com/wao/pyyautils.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

